19_bits_arr/grade.txt
Grading at Tue Mar  3 10:19:57 UTC 2020
Attempting to compile numToBits.c
numToBits.c: In function ‘numToBits’:
numToBits.c:45:14: error: unused variable ‘num’ [-Werror=unused-variable]
     uint32_t num = nums[i];
              ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
